2004-02-11  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (about): translator_credits ->
	translator-credits.

2004-02-09  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Adjusted the hint sensitivity patch again: make it
	work in the fresh-game situation. It's not very helpful, but it
	does make sense.

2004-02-08  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c: Minor changes to Richard's patch. Future-proofing
	(centralising the location of the hint array offset) and reducing
	the textural size of the if statement so that it visually matches
	it's importance in the routine. All in all, less than this
	explanation.

2004-02-07  Richard Hoelscher  <rah@rahga.com>

	* gnomine.c (focus_out_cb, resume_game_cb, show_face):
	Made the hint item insensitive when we're in "hide" mode, 
	when the game is over, and before a new game.

	* minefield.c (_setup_sign): Remove unused variable.
	(gtk_minefield_hint): Fixed hints in non-square minefields.

2004-01-29  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnome-gnomine.png: New graphic from Richard Hoelscher to fit in
	with the "nautical" theme we've decided on.

2004-01-24  Callum McKenzie  <callum@physics.otago.ac.nz>

	* Makefile.am: 
	* minefield.c:
	* flag.svg:
	* mine.svg:
	* flag-question.svg:
	* flag.png:
	* mine.png:
	* flag-question.png: Replace the png graphics with SVG ones courtesy
	of Richard Hoelscher.

	* minefield.h:	
	* minefield.c: Moved over the using pixbufs for the flags and
	mines. This means a lot more client-server traffic until we cache
	the results in pixbufs. However the iamge quality improvement is
	immense.

2003-11-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnomine.c (main): Teaks to the main window to make it more
	aesthetically pleasing.

2003-11-04  Callum McKenzie  <callum@physics.otago.ac.nz>

	* minefield.c (gtk_minefield_toggle_mark): Removed an
	impossible-to-satisfy game-over check. Also limit the number of